fix layout
- remove horizontal scrolling
- implement new responsive breakpoints
- correct scroll offset for the last page
- increase width of the third page second list

--- a/scss/_layout.scss
+++ b/scss/_layout.scss
@@ -1,21 +1,21 @@
 @use 'media' as *;
 
 html, body {
+  overflow-x: hidden;
   box-sizing: border-box;
   font-size: 16px;
-  min-width: $portrait-min-width;
 
-  @include for-portrait {
+  @include for-laptop {
+    font-size: 15px;
+  }
+  @include for-tablet {
+    font-size: 14px;
+  }
+  @include for-mobile {
+    font-size: 13px;
+  }
+  @include for-mobile-sm {
     font-size: 12px;
-  }
-  @include for-portrait-small {
-    font-size: 1.7vw;
-  }
-  @include for-portrait-smaller {
-    font-size: 9.3px; /* 1.7vw; */
-  }
-  @include for-portrait-min-width {
-    font-size: 7.2px; /* 1.5vw; */
   }
 }
 html, body, p {
@@ -24,7 +24,14 @@ html, body, p {
 }
 
 body {
-  overflow-x: hidden;
+
+  header {
+    nav {
+      @include for-mobile-sm {
+        right: 0.5rem;
+      }
+    }
+  }
 
   main {
     article {
@@ -60,7 +67,7 @@ body {
             padding-bottom: 10vh;
             align-self: center;
 
-            @include for-portrait {
+            @include for-laptop {
               width: 80vw;
               height: auto;
             }
@@ -72,7 +79,7 @@ body {
           flex-flow: column nowrap;
           justify-content: center;
           align-items: center;
-          width: 100vw;
+          width: 100%;
           height: 100vh;
 
           h1 {
@@ -153,10 +160,29 @@ body {
           justify-content: center;
           gap: 2rem;
 
+          @include for-laptop {
+            gap: 1.5rem;
+          }
+
+          @include for-mobile-sm {
+            gap: 0.75rem;
+          }
+
           div.strength-card {
             padding: 1.5rem;
             text-align: center;
             flex: 0 1 15rem;
+
+            img {
+
+              @include for-laptop {
+                max-width: 20vw;
+              }
+
+              @include for-mobile-sm {
+                max-width: 11vw;
+              }
+            }
 
             h3 {
               margin-bottom: .5rem;
@@ -176,7 +202,7 @@ body {
           gap: 1em;
 
           li {
-            width: 50vw;
+            width: 55vw;
             display: flex;
             flex-direction: row;
             padding: 0.5rem;
